# vlc

./: OPENGL_IMPORTERS.md  PLAYER_TODO.txt  RFC-libvlc-playlist.md  SHADER_SAMPLER.md  WIP-libvlc.md  WIP-libvlc.rst  WIP-playlist.md  YADIF.md  configure.ac  rfc.md  wip.md
contrib/src/medialibrary/: rules.mak
contrib/src/vpx/: rules.mak
doc/: gpufilter.md
include/: vlc_aout.h  vlc_aout_volume.h  vlc_arrays.h  vlc_codec.h  vlc_common.h  vlc_cxx_helpers.hpp  vlc_demux.h  vlc_es.h  vlc_events.h  vlc_extensions.h  vlc_filter.h  vlc_fingerprinter.h  vlc_fixups.h  vlc_inhibit.h  vlc_input.h  vlc_input_item.h  vlc_interface.h  vlc_list.h  vlc_media_browser.h  vlc_media_library.h  vlc_media_source.h  vlc_media_tree.h  vlc_meta.h  vlc_objects.h  vlc_opengl.h  vlc_picture.h  vlc_player.h  vlc_player_info.h  vlc_playlist.h  vlc_playlist_export.h  vlc_playlist_new.h  vlc_renderer_discovery.h  vlc_services_discovery.h  vlc_sout.h  vlc_spu.h  vlc_stream.h  vlc_tls.h  vlc_vector.h  vlc_video_splitter.h  vlc_vod.h  (+3 more)
include/vlc/: deprecated.h  libvlc.h  libvlc_media.h  libvlc_media_player.h  libvlc_playlist.h
lib/: Makefile.am  event.c  libvlc.sym  media.c  media_internal.h  media_list.c  media_list_player.c  media_player.c  media_player_internal.h  playlist_new.c  video.c
modules/access/: bluray.c  decklink.cpp  ftp.c  live555.cpp
modules/access/dcp/: dcp.cpp
modules/access/dshow/: access.h  dshow.cpp  filter.cpp  filter.h
modules/access/dsm/: sd.c
modules/access_output/: livehttp.c
modules/audio_filter/spatializer/: spatializer.cpp
modules/audio_output/: Makefile.am  aaudio.c  mmdevice.h
modules/codec/avcodec/: encoder.c  va.h  va_surface.h  video.c
modules/codec/omxil/: mediacodec.c
modules/codec/webvtt/: subsvtt.c
modules/control/: gestures.c  hotkeys.c  motion.c  oldrc.c
modules/control/dbus/: dbus.c  dbus_player.c  dbus_root.c  dbus_tracklist.c
modules/demux/: Makefile.am  mock.c  sid.cpp
modules/demux/mkv/: Ebml_parser.cpp  Ebml_parser.hpp  chapters.hpp  demux.cpp  demux.hpp  matroska_segment.cpp  matroska_segment.hpp  mkv.cpp  mkv.hpp  (+9 more)
modules/gui/: Makefile.am  ncurses.c  playlist_proxy.c  playlist_proxy.h
modules/lua/: extension.c  intf.c  libs.h  vlc.h
modules/misc/: Makefile.am  audioscrobbler.c  fingerprinter.c  logger.c
modules/mux/: asf.c
modules/services_discovery/: mediadirs.c  microdns.c  podcast.c  upnp.cpp
modules/spu/: mosaic.h
modules/stream_out/: mosaic_bridge.c
modules/video_filter/: Makefile.am  blend.cpp  egl_pbuffer.c  framerate_doubler.c  opencv_example.cpp  opencv_wrapper.c  opengl.c  opengl_yadif.c
modules/video_output/: Makefile.am  decklink.cpp  glx.c  ios.m
modules/visualization/: projectm.cpp  vsxu.cpp
po/: POTFILES.in
share/: Makefile.am  js.manifest.txt  js.vendors_manifest.txt
share/lua/: .gitignore  README.txt
share/lua/extensions/: VLSub.lua
share/lua/http/: .eslintrc.json  body.html  head.html  index.html
share/lua/http/src/assets/: icon-template.txt
share/lua/http/src/assets/compiled-icons/: delete.js  format-list-bulleted.js  menu.js  play-circle-outline.js  plus.js  poll.js  replay.js  shuffle-variant.js
share/lua/http/src/components/controls/: filebrowser.component.html  filebrowser.component.js  sidenav.component.html  sidenav.component.js  sidenav.component.scss
share/lua/http/src/components/equalizer/: equalizer.component.html  equalizer.component.js
share/lua/http/src/components/player/: player.component.scss  plyr.lib.custom.scss  plyr.lib.vars.scss  plyr.methods.js
share/lua/http/src/components/playlist/: buttons.playlist.component.html  buttons.playlist.component.js  playlist.component.html  playlist.component.js  playlist.component.scss
share/lua/http/src/components/sot/: stream.manager.component.html  stream.manager.component.js
share/lua/http/src/components/svg-icon/: svg-icon.component.html  svg-icon.component.js  svg-icon.component.scss
share/lua/http/src/components/track-synchronisation/: tracksync.component.html  tracksync.component.js
share/lua/http/src/components/vlm/: vlm.component.html  vlm.component.js  vlm.component.scss
share/lua/http/src/scss/: bootstrap.scss  components.scss  main.scss  mixins.util.scss  vendors.scss
share/lua/http/src/services/: bus.service.js  command.service.js  initialize.service.js
share/lua/intf/: cli.lua
share/lua/intf/modules/: httprequests.lua
src/: Makefile.am  libvlc-module.c  libvlc.c  libvlc.h  libvlccore.sym
src/audio_output/: output.c
src/clock/: clock.c  clock.h
src/input/: decoder.c  decoder.h  decoder_helpers.c  demux.c  demux.h  es_out.c  event.c  event.h  input.c  input_internal.h  item.c  mrl_helpers.h  player.c  player.h  player_info.c  player_info.h  stream_extractor.c  var.c  vlm.c  vlm_internal.h
src/interface/: dialog.c  interface.c
src/media_browser/: media_browser.c  media_browser.h  media_source.c
src/media_source/: media_source.c  media_source.h  media_tree.c  media_tree.h  test.c
src/media_tree/: media_tree.c  media_tree.h
src/misc/: actions.c  background_worker.c  background_worker.h  httpcookies.c  image.c  keystore.c  messages.c  objects.c  picture.c  variables.c
src/modules/: modules.c
src/network/: httpd.c
src/playlist/: art.c  content.c  engine.c  export.c  fetcher.c  item.c  item.h  player.c  player.h  playlist.c  playlist_internal.h  preparse.c  preparser.c  randomizer.c  randomizer.h  services_discovery.c  test.c  thread.c  view.c  view.h
src/playlist_legacy/: loadsave.c
src/playlist_new/: content.c  content.h  control.c  control.h  item.c  item.h  navigate.c  navigate.h  notify.c  notify.h  player.c  player.h  playlist.c  playlist.h  preparse.c  preparse.h  randomizer.c  request.c  shuffle.c  sort.c  test.c
src/preparser/: fetcher.c  preparser.c  preparser.h
src/stream_output/: stream_output.c
src/test/: arrays.c  mrl_helpers.c  shared_data_ptr.cpp  vector.c
src/video_output/: display.c  display.h  interlacing.c  opengl.c  video_output.c  video_widgets.c  vout_spuregion_helper.h
test/: Makefile.am
test/libvlc/: media.c  media_player.c  playlist.c
(+278 files in other folders)
